set (Tutorial_VERSION_MAJOR 1)
set (Tutorial_VERSION_MINOR 0)

PROJECT(THREAD_LIB)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
ADD_COMPILE_OPTIONS(-g -Wall -std=c++11)

#INCLUDE_DIRECTORIES(${PROJECT_ROOT_DIRECTORY}/core/net/)
INCLUDE_DIRECTORIES(${PROJECT_BINARY_DIR}/src/)
INCLUDE_DIRECTORIES(${PROJECT_BINARY_DIR}/src/thread/)

SET(SRC_LIST 
    ${PROJECT_BINARY_DIR}/src/thread/queue.cpp
    ${PROJECT_BINARY_DIR}/src/thread/thread_pool.cpp
    ${PROJECT_BINARY_DIR}/src/thread/coroutine.cpp
    )

MESSAGE(STATUS "src list dir :" ${SRC_LIST})
ADD_LIBRARY(tlthread STATIC ${SRC_LIST})
TARGET_LINK_LIBRARIES(tlthread pthread corenet protobuf)
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)

MESSAGE(STATUS "ToolKit Project dir :" ${PROJECT_BINARY_DIR})
MESSAGE(STATUS "ToolKit source Project dir :" ${CMAKE_SOURCE_DIR})

SET(SRC_LIST 
    ${PROJECT_BINARY_DIR}/src/thread/test.cpp
    )
MESSAGE(STATUS "src list dir :" ${SRC_LIST})
ADD_EXECUTABLE(test ${SRC_LIST})
