set (Tutorial_VERSION_MAJOR 1)
set (Tutorial_VERSION_MINOR 0)

PROJECT(TEST_RPC)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
ADD_COMPILE_OPTIONS(-g -Wall -std=c++11)

#INCLUDE_DIRECTORIES(${PROJECT_ROOT_DIRECTORY}/core/net/)
INCLUDE_DIRECTORIES(${PROJECT_BINARY_DIR}/../)
INCLUDE_DIRECTORIES(${PROJECT_BINARY_DIR}/../pbrpc/)
INCLUDE_DIRECTORIES(${PROJECT_BINARY_DIR}/../log/)
LINK_DIRECTORIES(${PROJECT_BINARY_DIR}/../../lib/)

SET(SVR_LIST 
    rpc.pb.cc
    svr.cpp
    )

SET(CLI_LIST 
    rpc.pb.cc
    cli.cpp
    )

ADD_EXECUTABLE(svr ${SVR_LIST})
ADD_EXECUTABLE(cli ${CLI_LIST})
TARGET_LINK_LIBRARIES(svr pthread corenet protobuf event)
TARGET_LINK_LIBRARIES(cli pthread corenet protobuf event)

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)

MESSAGE(STATUS "Net Project dir :" ${PROJECT_BINARY_DIR})
MESSAGE(STATUS "Net source Project dir :" ${CMAKE_SOURCE_DIR})
